2000-06-06  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (fetch_mail): 
	* folder-browser.c (folder_browser_load_folder): Update for folder
	creation/existence changes.

	* message-list.c (message_list_set_folder): Remove the code to
	create the folder if it doesn't exist, since we don't want to do
	that.

2000-06-05  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (composer_send_cb): Leave the composer window around
	if the message doesn't get sent.

2000-06-05  Matt Loper  <matt@helixcode.com>

	* folder-browser.c (etable_key): Allow "GDK_KP_Delete", a keypad
	delete key, to delete a message.

2000-06-05  Dan Winship  <danw@helixcode.com>

	* session.c (evolution_auth_callback): Remember passwords between
	calls.
	(forget_passwords): Callback for "Forget Passwords" menu item.

	* folder-browser-factory.c (control_activate): 
	(control_deactivate): Add "Forget Passwords" menu item.

	* mail.h, mail-ops.c: fix some function prototypes

	* folder-browser.c (etable_key): Add "Delete" = delete message.

	* mail-format.c (mail_generate_forward): Update for new composer
	attachment interface.

2000-06-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c (providers_config_new): Added a new notebook
	page that allowed for mail format (text/plain or 
	multipart/alternative)

2000-06-02  Dan Winship  <danw@helixcode.com>

	* message-list.c (filter_date): If the date in the summary is 0,
	output "?".

	* component-factory.c (create_view): keep a GList of folder
	browsers created
	(owner_unset_cb): Go through the list and close each folder before
	exiting so they sync their summary state, etc to disk.

	* mail-ops.c (fetch_mail): Use camel_service_connect, not
	connect_with_url, since we already passed the URL into
	camel_session_get_store.

2000-06-02  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Use camel_folder_free_summary instead of
	g_ptr_array_free.  Unref the folder when we're done with it.
