@@ -1,3 +1,10 @@
+2000-06-09  Dan Winship  <danw@helixcode.com>
+
+	* mail-format.c: Redo things a bit so that whitespace-only
+	text parts aren't displayed. (In particular, so that
+	whitespace-only subparts of multipart/mixed aren't displayed as
+	separate (empty) parts.)
+
 2000-06-06  Dan Winship  <danw@helixcode.com>
 
 	* mail-ops.c (fetch_mail): 
